--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://stevereuter.github.io/bike-tuner",
+    "homepage": "https://stevereuter.github.io/bike-tuner/",
     "name": "bike-tuner",
     "version": "0.1.0",
     "private": true,
